--- a/student.html
+++ b/student.html
@@ -24,7 +24,7 @@
 <br>
 <strong> Submission date :  </strong> 18/6/2021
 <br>
-<strong> Published URL :  </strong> KIV
+<strong> Published URL :  </strong> <a href"https://nishanisrina.github.io/resumewebsite/index.html"> https://nishanisrina.github.io/resumewebsite/index.html </a>
 <br>
 <strong> Your image :  </strong> 
 <br>
